# BridgeIA

./: .gitignore  README.md  pyproject.toml  run_local.sh
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
.github/workflows/: ci.yml  dependency-review.yml
bridgeia/: __init__.py  __main__.py  main.py
bridgeia/core/: __init__.py  bridge.py  level.py
bridgeia/sim/: __init__.py  simulation.py
bridgeia/tools/: __init__.py
bridgeia/ui/: __init__.py  renderer.py
levels/: level_01.json
